# soccer-video-analytics

./: .gitignore  LICENSE.md  README.md  draw_match.py  pyproject.toml  run.py  run_utils.py
inference/: __init__.py  base_classifier.py  base_detector.py  box.py  classification.py  colors.py  converter.py  filters.py  hsv_classifier.py  inertia_classifier.py  nn_classifier.py  yolov5.py
soccer/: __init__.py  ball.py  draw.py  match.py  pass_event.py  player.py  team.py
